crates/cli/tests/snapshots/lib__check_test@operator_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/operator_type_mismatch.nemo
input_file: crates/cli/tests/check/operator_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[03] Error:[0m Invalid operator + for lhs of type i32 and rhs of type f32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m [0m+[38;5;249m [0m[38;5;249m2[0m[38;5;249m.[0m[38;5;249m0[0m
 [38;5;240m  │[0m      ┬  
 [38;5;240m  │[0m      ╰── Invalid operator + for lhs of type i32 and rhs of type f32
[38;5;246m───╯[0m

Error: "Check failed with 1 errors"
