crates/cli/tests/snapshots/lib__check_test@pattern_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/pattern_type_mismatch.nemo
input_file: crates/cli/tests/check/pattern_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[20] Error:[0m This pattern can't match a value of type i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0mV::S _[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m}[0m
 [38;5;240m  │[0m     ───┬──  
 [38;5;240m  │[0m        ╰──── This pattern can't match a value of type i32
[38;5;246m───╯[0m

Error: "Check failed with 1 errors"
