crates/cli/tests/snapshots/lib__check_test@ty_arg_count_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/ty_arg_count_mismatch.nemo
input_file: crates/cli/tests/check/ty_arg_count_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[22] Error:[0m Mismatched type arg count. Expected 2 arguments, but got 0
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m15 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0mBox [38;5;249m=[0m[38;5;249m [0m[38;5;249mB[0m[38;5;249mo[0m[38;5;249mx[0m[38;5;249m#[0m[38;5;249m[[0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m][0m[38;5;249m{[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m;[0m
 [38;5;240m   │[0m           ──┬─  
 [38;5;240m   │[0m             ╰─── Mismatched type arg count. Expected 2 arguments, but got 0
[38;5;246m────╯[0m

[31m[22] Error:[0m Mismatched type arg count. Expected 2 arguments, but got 1
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m16 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0mBox[i32][38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249mB[0m[38;5;249mo[0m[38;5;249mx[0m[38;5;249m#[0m[38;5;249m[[0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m][0m[38;5;249m{[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m;[0m
 [38;5;240m   │[0m           ────┬───  
 [38;5;240m   │[0m               ╰───── Mismatched type arg count. Expected 2 arguments, but got 1
[38;5;246m────╯[0m

[31m[22] Error:[0m Mismatched type arg count. Expected 2 arguments, but got 1
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m17 │[0m [38;5;249m [0m[38;5;249m [0mfunc[38;5;249m#[0m[38;5;249m[[0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m][0m[38;5;249m([0m[38;5;249m3[0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m   │[0m   ──┬─  
 [38;5;240m   │[0m     ╰─── Mismatched type arg count. Expected 2 arguments, but got 1
[38;5;246m────╯[0m

[31m[22] Error:[0m Mismatched type arg count. Expected 2 arguments, but got 1
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m18 │[0m [38;5;249m [0m[38;5;249m [0mBox#[i32] { a = 1, b = 2 }[38;5;249m;[0m
 [38;5;240m   │[0m   ─────────────┬────────────  
 [38;5;240m   │[0m                ╰────────────── Mismatched type arg count. Expected 2 arguments, but got 1
[38;5;246m────╯[0m

[31m[22] Error:[0m Mismatched type arg count. Expected 1 argument, but got 2
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m19 │[0m [38;5;249m [0m[38;5;249m [0mList::Nil#[i32, f32] {}[38;5;249m;[0m
 [38;5;240m   │[0m   ───────────┬───────────  
 [38;5;240m   │[0m              ╰───────────── Mismatched type arg count. Expected 1 argument, but got 2
[38;5;246m────╯[0m

Error: "Check failed with 5 errors"
