crates/cli/tests/snapshots/lib__check_test@type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - /Users/christoph/code/nemo-lang/crates/cli/tests/check/type_mismatch.nemo
input_file: crates/cli/tests/check/type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[15] Error:[0m Type mismatch. Expected i32, but got f32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m10.0
 [38;5;240m  │[0m                  ──┬─  
 [38;5;240m  │[0m                    ╰─── Type mismatch. Expected i32, but got f32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected fn (i32) -> i32, but got fn (f32) -> f32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249my[0m[38;5;249m_[0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m([0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mfn (x : f32) -> f32 { x }
 [38;5;240m  │[0m                                  ────────────┬────────────  
 [38;5;240m  │[0m                                              ╰────────────── Type mismatch. Expected fn (i32) -> i32, but got fn (f32) -> f32
[38;5;246m───╯[0m

Error: "Check failed with 2 errors"
