crates/cli/tests/snapshots/lib__check_test@unknown_struct.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - "\\\\?\\C:\\Users\\creek\\code\\nemo-lang\\crates\\cli\\tests\\check\\unknown_struct.nemo"
input_file: crates/cli/tests/check/unknown_struct.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[07] Error:[0m Unknown type Unknown
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mUnknown[38;5;249m [0m[38;5;249m{[0m[38;5;249m}[0m
 [38;5;240m  │[0m           ───┬───  
 [38;5;240m  │[0m              ╰───── Unknown type Unknown
[38;5;246m───╯[0m

Error: "Check failed with 1 errors"
